
ChangeLog
 [ + added, - removed, * changed ]
 * 09Oct2013 Fixed bug in merger when processing HWC_CHANGE_EV: counters shared by the old and the new set appeared twice.
 + 26Sep2013 Fix missing header in merger files
             BFD compilation in cross-compiled environments
             Autodetection of librt using gcc --print-file-name=librt.so
             New --with-librt to pass the location of librt
 * 17Sep2013 Improved instrumentation support for MPI_Comm_spawn. Now supports concurrent spawns from different process of the parent application.
 + 09Sep2013 Added a quicksort algorithm for files 
 * 09Sep2013 Revamped pthread event types so as all calls are only one type
             Prepare scripts for LSF & slurm (MPI)
 * 06Sep2013 Fixed some warnings
             Read /proc/self/maps to know which binaries & libraries are used
             Create tests to test the usage of binaries & libraries
             Additional location for MPI libraries / includes / binaries in BG/Q
             Many minor bugfixes
             Fixed minor configure/compilation issues
             Protected includes of system headers by their appropriate #ifdef's
             Added missing licensing headers
 * 05Sep2013 Upgraded to version 3.0rc2
             Major changes to the on-line analysis. The front-end is now launched as a separate process.
 + 05Sep2013 Added a new control (matching_zone) to the communications matching algorithm, so as not to make matches that cross areas where the tracing was disabled.
 * 02Sep2013 Fixing OpenCL instrumentation (added clRetain & clRelease calls)
             Fixed some event mismatches in the OpenCL accelerator side
             Added OpenCL C++ example
 * 30Jul2013 Added overwrite option in <merge> section
             Removed unused 'remove-files' in favor of 'keep-mpits'
             Fix fortran declarations on API
             Fix MPI interfaces declarations
 * 29Jul2013 Fixed generation of codelocation & user function in nanos stacked